[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-ui"
version = "1.0.0"
description = "Shared PyQt6 theme and widgets for the Build ecosystem"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5,<7",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/HarperZ9/build-ui"
Repository = "https://github.com/HarperZ9/build-ui"
Issues = "https://github.com/HarperZ9/build-ui/issues"

[tool.setuptools.packages.find]
include = ["build_ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
